# contrast

./: Cargo.toml  README.md  test.txt
.github/workflows/: rust.yml
listings/: build.rs
listings/composite_templates/1/window/: imp.rs
src/: data.rs  git.rs  main.rs  ui.rs  watcher.rs
src/git/: commit.rs  diff.rs  hash.rs  head.rs  header.rs  index.rs  line.rs  mod.rs  myers.rs  object.rs  stats.rs
src/ui/: code.rs  commits.rs  diff_area.rs  diff_type.rs  files_area.rs  line_numbers.rs  log.rs  mod.rs  origins.rs  selection_area.rs  stats.rs
tests/data/: index  new.yml  old.yml  tree
