[package]
name = "contrast-diff-viewer"
version = "0.6.0"
edition = "2021"
authors = ["m4tthewde <mattider2@gmail.com>"]
license = "GPL-3.0"
description = "A simple diff viewer for Git."
readme = "README.md"
homepage = "https://github.com/m4tthewde/contrast"
repository = "https://github.com/m4tthewde/contrast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
git2 = "0.17.2"
puffin = "0.16.0"
puffin_egui = "0.22.0"
rfd = "0.11.4"

