[package]
name = "contrast-diff-viewer"
version = "0.9.0"
edition = "2021"
authors = ["m4tthewde <matthias.kronberg@gmail.com>"]
license = "GPL-3.0"
description = "A simple diff viewer for Git."
readme = "README.md"
homepage = "https://github.com/m4tthewde/contrast"
repository = "https://github.com/m4tthewde/contrast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.31"
eframe = "0.23.0"
egui = "0.23.0"
env_logger = "0.10.0"
flate2 = "1.0.28"
git2 = "0.17.2"
ignore = "0.4.20"
notify = "6.1.1"
puffin = "0.17.0"
puffin_egui = "0.23.0"
rfd = "0.11.4"

